# robopilot

./: .gitignore  Makefile  README.md  api.py  arm_mqtt.py  docker-compose.yml  estop.py  example.py  ffplay_stream.py  gripper.py  gripper_close.py  gripper_open.py  gripper_open.script  hydro_1.py  hydro_2.py  m5cam.py  main.py  position.py  realtime_stream_processor.py  requirements.txt  robot.py  stream_client.py  stream_extractor.py  webm_stream_client.py
Gripper Control via Socket/: example.py  gripper_methods.py  gripper_methods_def.py  gripper_socket.py  license  pyproject.toml
backend/: Dockerfile  README_LMSTUDIO.md  README_STT.md  README_TTS.md  create_admin.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/config/: exception_config.py  settings.py
backend/app/controllers/: llm_connection_controller.py  lmstudio_controller.py  stt_controller.py  tts_controller.py  user_controller.py
backend/app/middleware/: auth.py
backend/app/models/: base.py  chat_session.py  config.py  pageable.py  user.py
backend/app/repository/: base_repository.py  chat_session_repository.py  llm_connection_repository.py  user_repository.py
backend/app/services/: cron_scheduler.py  user_service.py
backend/app/utils/: __init__.py  db_session.py  lmstudio_client.py  lmstudio_tools.py  piper_tts.py  robot.py  whisper_stt.py
backend/app/utils/praison_integration/: __init__.py  agents.py
backend/migrations/: env.py
backend/migrations/versions/: 2025-04-25_1811_54f68ea8a6b5.py  2025-05-12_0001_add_updated_at_to_messages.py  2025-05-13_0001_add_function_calls_table.py  2025-05-14_0001_add_llm_connections_table.py  2025-05-15_0001_add_default_lmstudio_connection.py  2025-05-16_0001_add_ollama_connection.py
backend/scripts/: docker-entrypoint.sh
camera_server/: README.md  main.py  requirements.txt
camera_server/static/js/: stream.js
camera_server/templates/: index.html
frontend/: Dockerfile  README.md  next.config.js  package-lock.json  package.json  postcss.config.mjs
frontend/src/app/: App.tsx  globals.css  page.tsx  providers.tsx  types.ts
frontend/src/app/api/: lmstudio.ts  voice.ts
frontend/src/app/components/: AudioControls.tsx  AudioSettings.tsx  AudioTester.tsx  BottomToolbar.tsx  Events.tsx  ModeSelection.tsx  Transcript.tsx  VADProcessor.tsx
frontend/src/app/components/chat/: ModelSelection.tsx  SessionList.tsx
frontend/src/app/config/: api.ts
frontend/src/app/contexts/: AudioContext.tsx  EventContext.tsx  LMStudioContext.tsx  TranscriptContext.tsx
frontend/src/app/utils/: audioInit.ts  cookies.ts  toolHandler.ts  wavRecorder.ts
