[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "fast-api-docker-poetry"
version = "0.1.0"
description = "Fast Api voice chat bot API"
authors = [{ name = "xsnyrch" }]
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi>=0.115.12,<0.116.0",
    "alembic>=1.10.4,<2.0.0",
    "python-multipart>=0.0.20,<0.1.0",
    "python-ulid>=1.1.0,<2.0.0",
    "backoff>=2.2.1,<3.0.0",
    "sqlalchemy>=2.0.12,<3.0.0",
    "asyncpg>=0.27.0,<0.30.0",
    "psycopg2-binary>=2.9.6,<3.0.0",
    "bcrypt>=4.0.1,<5.0.0",
    "passlib>=1.7.4,<2.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "lmstudio>=1.3.0,<2.0.0",
    "praisonaiagents[llm] (>=0.0.76,<0.0.77)",
    "piper-tts >=1.2.0, <2.0.0",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "ur_rtde >=1.5.5, <2.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.6.0,<23.0.0",
    "pyproject-flake8>=0.0.1a4,<0.1.0",
    "pre-commit>=2.19.0,<3.0.0",
    "ipykernel>=6.29.5,<7.0.0",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.pydantic-pycharm-plugin]
parsable-type-highlight = "disable"   # This is defined as parsable so don't warn on it
acceptable-type-highlight = "warning"
